@@ -65,8 +65,8 @@ table {margin:10px 0; border-collapse:collapse;}
 table, th, td {border: 1px solid #333; padding:5px 10px;}
 table th {font-weight:bold;}
 
-ul {list-style:square; margin:2px 0 2px 0;}
-ol {list-style:decimal; margin:2px 0 2px 0;}
+ul {list-style:square; margin:5px 0 5px 0;}
+ol {list-style:decimal; margin:5px 0 5px 0;}
 li {margin:0 0 0 20px;}
 dl {margin:10px 0;}
 dt {font-weight:bold;}
@@ -83,5 +83,8 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 .alignleft {float:left; margin:0.4em 1em 0.4em 0;}
 .aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
-.wp-caption {background:none; max-width:100%;}
+.wp-caption {max-width:100%;}
 .wp-caption-text {text-align:center;}
+
+.gallery dl, .gallery dt, .gallery dd {margin:0; padding:0;}
+.gallery-caption {max-width:100%; text-align:center;}
