@@ -15,8 +15,8 @@
 		load_theme_textdomain('darkelements', get_template_directory() . '/languages');  
 
 	// Register Menu
-		register_nav_menus( 
-		array( 'primary' => __( 'Primary Navigation', 'darkelements' ), 
+		register_nav_menus( array( 
+			'primary' => __( 'Primary Navigation', 'darkelements' ), 
 	 	) ); 
 
 	// Add document title
@@ -27,22 +27,22 @@
 
 	// Custom header	
 		$args = array(		
-		'width' => 680,
-		'height' => 450,
-		'default-image' => get_template_directory_uri() . '/images/boats.jpg',
-		'header-text' => false,
-		'uploads' => true,
+			'width' => 680,
+			'height' => 450,
+			'default-image' => get_template_directory_uri() . '/images/boats.jpg',
+			'header-text' => false,
+			'uploads' => true,
 		);	
 		add_theme_support( 'custom-header', $args );
 
 	// Default header
-	register_default_headers( array(
-		'boats' => array(
-			'url'           => get_template_directory_uri() . '/images/boats.jpg',
-			'thumbnail_url' => get_template_directory_uri() . '/images/boats.jpg',
-			'description'   => __( 'Default header', 'darkelements' )
-		)
-	) );
+		register_default_headers( array(
+			'boats' => array(
+				'url'           => get_template_directory_uri() . '/images/boats.jpg',
+				'thumbnail_url' => get_template_directory_uri() . '/images/boats.jpg',
+				'description'   => __( 'Default header', 'darkelements' )
+			)
+		) );
 
 	// Post thumbnails
 		add_theme_support( 'post-thumbnails' ); 
@@ -57,10 +57,11 @@
 		add_theme_support( 'automatic-feed-links' );
 
 	// Switches default core markup for search form, comment form, and comments to output valid HTML5
-		add_theme_support( 'html5', array( 'search-form', 'comment-form', 'comment-list' ) );
+		add_theme_support( 'html5', array( 'search-form', 'comment-form', 'comment-list', 'caption' ) );
 
 	// Background color
-		$args = array( 'default-color' => '333333', 
+		$args = array( 
+			'default-color' => '333333', 
 		); 
 		add_theme_support( 'custom-background', $args ); 
 
@@ -73,7 +74,7 @@
 		echo '<!--[if lt IE 9]>'. "\n"; 
 		echo '<script src="' . esc_url( get_template_directory_uri() . '/js/ie.js' ) . '"></script>'. "\n"; 
 		echo '<![endif]-->'. "\n"; 
-		}
+	}
 	add_action( 'wp_head', 'darkelements_html5' ); 
 
 
@@ -162,11 +163,12 @@
 
 // Custom excerpt lenght (default length is 55 words)
 	function darkelements_excerpt_length( $length ) { 
-		return 75; } 
+		return 75; 
+	} 
 	add_filter( 'excerpt_length', 'darkelements_excerpt_length', 999 ); 
 
 
-// Theme Customizer (option to add logo)
+// Theme Customizer (logo)
 	function darkelements_theme_customizer( $wp_customize ) { 
 		$wp_customize->add_section( 'darkelements_logo_section' , array( 
 			'title' => __( 'Logo', 'darkelements' ), 
