@@ -1,7 +1,7 @@
 /*
 Theme Name: DarkElements
 Theme URI: http://www.guidovanderleest.nl/darkelements
-Version: 3.2
+Version: 3.3
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: DarkElements is a free, clean, minimalistic, responsive, mobile friendly WordPress theme. Features: sidebar on left side, navigation on left side, widget areas in footer, custom header image, custom background, custom logo to replace blogname and description. That's it. Enjoy. 
@@ -106,8 +106,8 @@ table {margin:10px 0; border-collapse:collapse;}
 table, th, td {border: 1px solid #444; padding:5px 10px;}
 table th {font-weight:bold;}
 
-ul {list-style:square; margin:2px 0 2px 0;}
-ol {list-style:decimal; margin:2px 0 2px 0;}
+ul {list-style:square; margin:5px 0 5px 0;}
+ol {list-style:decimal; margin:5px 0 5px 0;}
 li {margin:0 0 0 20px;}
 dl {margin:10px 0;}
 dt {font-weight:bold;}
@@ -116,8 +116,8 @@ dd {margin:0 0 0 20px;}
 
 /* INPUTS */
 input, select, textarea {-webkit-appearance:none; -moz-appearance:none; border:1px solid #444; padding:2px 5px; background:none; color:#ddd; font-size:1em; font-family:'Open Sans', sans-serif; border-radius:5px; -moz-border-radius:5px;}
-input[type="submit"], input[type="reset"] {cursor:pointer;	border:0; padding:2px 5px; background:#ddd; color:#333;}
-input[type="submit"]:hover, input[type="reset"]:hover {background:#e77776; color:#ddd;}
+input[type="submit"], input[type="reset"], input[type="button"] {cursor:pointer; border:0; padding:2px 5px; background:#ddd; color:#333;}
+input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover {background:#e77776; color:#ddd;}
 input[type="checkbox"]{-webkit-appearance:checkbox; -moz-appearance:checkbox;}
 input[type="radio"]{-webkit-appearance:radio; -moz-appearance:radio;}
 select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
@@ -158,12 +158,13 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 
 
 /* PAGE */
-.page-title {padding:0 0 10px;}
+.page-title {clear:both; padding:0 0 10px;}
 .archive-description {display:block; font-style:italic;}
 .pagelink {clear:both; display:block; margin:20px 0 10px;}
 
 
 /* POST */
+.post-title {clear:both;}
 .sticky {clear:both; display:block; text-align:center; margin:0 0 10px; padding:5px; color:#e77776; border-top:1px solid #444; border-bottom:1px solid #444;}
 .postmetadata {clear:both; display:block; margin:20px 0; padding:2px 0; border-top:1px solid #444; border-bottom:1px solid #444;}
 .more {width:100%; clear:both; display:block; float:left; margin:20px 0; padding:0 0 20px; border-bottom:1px solid #444;}
@@ -196,12 +197,11 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 .wp-post-image, .single-image {float:left; margin:0.4em 1em 0.4em 0;}
 
-.wp-caption {background:none; max-width:100%;}
+.wp-caption {max-width:100%;}
 .wp-caption-text {text-align:center;}
 
 .gallery dl, .gallery dt, .gallery dd {margin:0; padding:0;}
-.gallery-caption {background:none; max-width:100%;}
-.gallery-caption-text {text-align:center;}
+.gallery-caption {max-width:100%; text-align:center;}
 
 
 /* SEARCHFORM */
@@ -212,18 +212,19 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 /* COMMENTS */
 #comments {width:100%; clear:both; float:left;}
-#comments .comment-list {background:none; border:1px solid #444; border-radius:5px; -moz-border-radius:5px; font-weight:normal; margin:20px 0; padding:0 20px 0 10px;}
-#comments .comment-list ol {list-style:none;}
-#comments .comment-list li {list-style:none; margin:0 0 0 10px;}
+.comment-list {background:none; border:1px solid #444; border-radius:5px; -moz-border-radius:5px; font-weight:normal; margin:20px 0; padding:0 20px 0 10px;}
+.comment-list ol {list-style:none;}
+.comment-list li {list-style:none; margin:0 0 0 10px;}
 .comment-body {border-left:1px solid #ddd; padding:0 0 0 15px; margin:20px 0;}
 .comment-notes, .form-allowed-tags {font-size:0.75em; padding:5px 0;}
 .comments-title, .comment-reply-title, .no-comments {clear:both; font-size:1.5em;} 
-.bypostauthor {font-style:italic;}
+.comment-author .avatar {margin:0 5px 0 0;}
+.bypostauthor, .comment-awaiting-moderation {font-style:italic;}
 
-#respond {padding:0; margin:0; clear:both;}
-#commentform label {padding:0 0 5px; display:block;}
-#commentform textarea, #commentform input {width:90%; padding:2px 5px;}
-#commentform input[type="submit"] {width:9em; padding:2px 5px;} 
+#respond {width:100%; clear:both;}
+.comment-form label {padding:0 0 5px; display:block;}
+.comment-form input, .comment-form textarea {width:80%;}
+.comment-form input[type="submit"] {width:auto;}
 
 
 /* COMMENT NAV */
